--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
